--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,45 +1,212 @@
+:root {
+  --main-input-color: #ff9999;
+  --border-radius: 0.5rem;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  background-image: url(../img/main-bg-image.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+input:not(
+    .uploader__input,
+    .order__field-submit,
+    .excursions__field-input--submit
+  ) {
+  background-color: var(--main-input-color);
+  border: none;
+  border-radius: var(--border-radius);
+  font-size: 1.6rem;
 }
 
 .panel {
-    display: flex;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 30px 0;
+  display: flex;
+  align-items: self-start;
+  margin: 0 auto;
+  max-width: 120rem;
+  padding: 3rem 0;
 }
 
 .panel__excursions {
-    width: 70%;
+  width: 70%;
+}
+
+.excursions__title {
+  text-align: center;
+  padding-bottom: 2rem;
+  letter-spacing: 0.2rem;
+  font-size: 3.6rem;
+}
+
+.excursions__form {
+  margin-bottom: 20%;
+}
+
+.excursions__description {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
 }
 
 .excursions {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.excursions__field-name {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 0.5rem;
+  font-size: 1.8rem;
 }
 
 .excursions__item {
-    border: 1px solid #bbb;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 20px;
-    width: calc(50% - 20px);
+  min-height: min-content;
+  border: 0.1rem solid #bbb;
+  border-radius: var(--border-radius);
+  padding: 3rem;
+  margin: 0 0.5rem 0.5rem 0;
+  width: calc(50% - 2rem);
+  position: relative;
+  background-color: #f4f4f4;
+}
+
+.excursions__field-input--submit {
+  padding: 0.5rem 2rem;
+  text-align: center;
+  width: 100%;
+  height: 10%;
+  overflow: hidden;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: var(--border-radius);
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  background-color: var(--main-input-color);
+  border: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.02rem;
+  font-size: 1.6rem;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.excursions__field-input--submit:hover {
+  background-color: #ff6b6b;
+  color: white;
 }
 
 .panel__form {
-    background-color: #f4f4f4;
-    padding: 20px;
-    width: 30%;
+  background-color: #f4f4f4;
+  padding: 2rem;
+  width: 30%;
+  border-radius: var(--border-radius);
+  font-size: 1.8rem;
 }
 
-.uploader, .order {
-    border-bottom: 1px solid #bbb;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
+.uploader,
+.order {
+  border-bottom: 0.1rem solid #bbb;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+}
+
+.order__field-name {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5rem 0;
+}
+
+.order__field-submit {
+  width: 100%;
+  cursor: pointer;
+  margin: 1rem 0;
+  padding: 0.5rem 2rem;
+  border-radius: var(--border-radius);
+  border: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 1.6rem;
+  background-color: #ff9999;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.order__field-submit:hover {
+  background-color: #ff6b6b;
+  color: white;
+}
+
+.summary__item {
+  border-bottom: 0.1rem solid black;
+  padding: 2rem 0;
+  margin: 0.5rem 0;
+}
+
+.summary__title {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5rem;
+  font-size: 2.1rem;
+}
+
+.summary__name {
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.summary__prices {
+  font-size: 1.4rem;
+  margin: 0.5rem;
+}
+
+.summary__btn-remove,
+.summary__btn-remove:active {
+  text-decoration: none;
+  color: red;
+  font-size: 2.4rem;
+}
+
+@media (max-width: 120rem) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media (max-width: 76rem) {
+  html {
+    font-size: 50%;
+  }
+  .order__field-name {
+    flex-direction: column;
+  }
+  .excursions__field-name {
+    justify-content: space-evenly;
+    font-size: 1.4rem;
+  }
+  .excursions__description {
+    font-size: 1.6rem;
+  }
 }
